--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,12 +5,36 @@ html {
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: $md-size;
+    color: #333333;
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 650px;
+    margin: auto;
+    padding: 0 16px;
+
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 button {
     cursor: pointer;
+    border: 1px solid #888888;
+    background: #888888;
+    color: #fff;
+    padding: 1rem;
 }
 
 button:disabled {
     cursor: default;
+}
+
+footer {
+    color: #888888;
+    border-top: 1px solid #eeeeee;
+    margin-top: 1rem;
+    padding: 1rem 0;
+}
+
+.main-content {
+    flex-grow: 1;
 }
