--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,12 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 html {
     font-size: 62.5%;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: $md-size;
     color: #333333;
-    font-family: Arial, Helvetica, sans-serif;
     max-width: 650px;
     margin: auto;
     padding: 0 16px;
@@ -14,6 +20,10 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+}
+
+nav {
+    margin-top: 2rem;
 }
 
 button {
@@ -24,10 +34,6 @@ button {
     padding: 1rem;
 }
 
-button:disabled {
-    cursor: default;
-}
-
 footer {
     color: #888888;
     border-top: 1px solid #eeeeee;
@@ -36,5 +42,9 @@ footer {
 }
 
 .main-content {
-    flex-grow: 1;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    flex-direction: column;
 }
