--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,3 +2,4 @@
 @import "./base/base";
 @import "./components/.weatherSummary";
 @import "./components/.weatherDetail";
+@import "./components/.weatherForm";
