--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap");
 * {
     box-sizing: border-box;
     margin: 0;
@@ -11,12 +11,12 @@ html {
 
 body {
     font-family: "Poppins", sans-serif;
-    font-size: $md-size;
+    font-size: 1.6rem;
     color: #333333;
     max-width: 650px;
     margin: auto;
     padding: 0 16px;
-
+    font-weight: bold;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
